Moulton generalization and Theorem test.

--- a/1-Projective_Planes.tex
+++ b/1-Projective_Planes.tex
@@ -2561,6 +2561,11 @@ Consequently, we observe that $\vect x_3 = \vect x_2 - \vect x_1$. This implies 
     with $\det(AA^T)=1458$.
 \end{xmpl}
 
+\begin{defn}
+    Given a projective plane $\igeo$, a \textsl{flag} is an incident pair $(C,\block a)$ with $C \in \pts$ and $\block a \in \blocks$.\footnote{The term also applies to a sequence of incidences. It comes from the idealized image of a flagpole where the contact point on the floor is incident with the line of the pole, and the pole with the surface of the flag's fabric.}  
+    Flags are sometimes written in the alternate order $(\block a,C)$.
+\end{defn}
+
 
 \section{Exercises}
 
@@ -2571,7 +2576,7 @@ Consequently, we observe that $\vect x_3 = \vect x_2 - \vect x_1$. This implies 
     The task is to determine the size of this set of flags by counting it in two distinct ways. This will lead to an equation from which $r$ can be found.}
 \end{exr}
 
-\begin{solution} Fix $O\in\pts$ and put $\pts'=\pts\setminus\set O$. Let $\blocks'$ be the set of blocks containing $O$. Consider the set of \textsl{flags}\footnote{The term applies to a sequence of incidences. It comes from the idealized image of a flagpole where the contact point on the floor is incident with the line of the pole, and the pole with the surface of the flag's fabric.}
+\begin{solution} Fix $O\in\pts$ and put $\pts'=\pts\setminus\set O$. Let $\blocks'$ be the set of blocks containing $O$. Consider the set of \textsl{flags}
         $$
         F = \set{(A,\block a)\in\pts'\times\blocks'\mid A\in\block a}.
         $$
