--- a/2-Collineations.tex
+++ b/2-Collineations.tex
@@ -1245,7 +1245,7 @@
     Let $\block a$, $\block b$ and $\block c$ be the three lines of the statement. Let $A=\block b\wedge\block c$. By the previous corollary, to show that $\Pi$ is a transition plane with respect to any line~$\ell$, it suffices to consider the case where~$A$ is not on~$\ell$.
     $$
         \begin{tikzpicture}[
-                scale=0.8,
+                scale=0.7,
                 every node/.style={font=\small},
                 c_point/.style={circle,fill=black,inner sep=1.5pt,draw=black},
                 point/.style={circle,fill=gray,inner sep=1.5pt,draw=gray}
@@ -1279,11 +1279,11 @@
 \end{proof}
 
 \begin{defn}
-    A projective plane is\/ $(O,\block d)$-Desarguesian if for any two triangles which are in perspective from\/ $O$ and two pairs of their corresponding sides meet in points of\/ $\block d$, the two triangles are in perspective from\/ $\block d$.
+    A projective plane is\/ $(O,\block d)$-\textsl{Desarguesian} if for any two triangles which are in perspective from\/ $O$ and two pairs of their corresponding sides meet in points of\/ $\block d$, the two triangles are in perspective from\/ $\block d$.
 \end{defn}
 
 \begin{thm} {\upshape[Baer, 1942]}\label{thm:baer}
-    Let\/ $(O, \block d)$ be a point-line pair in a projective plane\/~$\Pi$. Then\/ $\Pi$ is $(O, \block d)$-transitive if, and only if, $\Pi$ is $(O, \block d)$-Desarguesian.
+    Let\/ $(O, \block d)$ be a flag in a projective plane\/~$\Pi$. Then\/ $\Pi$ is $(O, \block d)$-transitive if, and only if, $\Pi$ is $(O, \block d)$-Desarguesian.
 \end{thm}
 
 \needspace{2\baselineskip}
@@ -1292,7 +1292,7 @@
         \item[\rm\textit{only if}:] Take two perspective triangles from the point $O$, as shown in the picture, where $X=A_1B_1\wedge A_2B_2$, $Y=A_1C_1\wedge A_2C_2$, $Z=B_1C_1\wedge B_2C_2$, with $XY=\block d$.
         $$
             \begin{tikzpicture}[
-                    scale=0.7,
+                    scale=0.6,
                     every node/.style={font=\small},
                     point/.style={circle,fill=black,inner sep=1.5pt,draw=black},
                 ]
